solved footer bug on safari

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -13,5 +13,6 @@
   img {
     margin: 15px;
     width: 45px;
+    height: 45px;
   }
 }
